<resources>
    <string name="No_Internet">Oh! It seems that you are not connected to Internet \10\10Please turn on Internet</string>
    <string name="Settings">Settings</string>
    <string name="Settings_location">Settings &gt;\10Locations</string>
    <string name="Stops">Stops</string>
    <string name="Support">Support</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_Us">About Us</string>
    <string name="about_us">About us</string>
    <string name="about_us_body_1">Delhi government had launched the common mobility card, \"ONE Delhi\" which is valid for travelling in metro trains, DTC and cluster buses. Thus Delhi had become the only city in India, which had a single mobility card, for travelling in Metro &amp; Buses, both.\10\10Delhi Government is launching an app through which commuters can plan multi-modal trips, including buses and metro trains in the city and use the ONE Delhi card.\10\10The Delhi government is committed to providing people a seamless, high-quality travel experience of city\'s public transport system.ONE Delhi card and ONE Delhi App, are the first steps in that journey.\10\10The cards will be available for sale at all metro stations and DTC pass counters. The existing metro smart cards will continue to stay valid, but any new card or replacement will be through \'ONE\' card.</string>
    <string name="about_us_body_2">One Delhi is a common app through which commuters can plan multi- modal trips including buses and metro from any point in Delhi. They will also be able to see the live locations of Delhi\'s buses.</string>
    <string name="about_us_body_3">Unlike the Metro smart card, which can only be used in buses, the ONE card can be used on all modes of public transport—the Delhi Metro, DTC buses or cluster scheme buses.</string>
    <string name="about_us_body_4">Electronic payment had become a feature on 5,500 buses with the launch of the Metro smart card. Passengers had to present their smart card to the bus conductor who will flash it on the electronic ticketing machine (ETM) screen to deduct the fare. The ONE card works in the same manner. All passengers have to do is top the card.</string>
    <string name="about_us_ques_2">What is the ONE Delhi App?</string>
    <string name="about_us_ques_3">What is the ONE card?</string>
    <string name="about_us_ques_4">How to use the ONE card?</string>
    <string name="already_at_destination">Already reached destination</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">One Delhi</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_to_clear_location">Are you sure you want to clear your location history?</string>
    <string name="are_you_sure_you_want_to_save_this_location_as">Are you sure you want to save this location as</string>
    <string name="arrow">arrow</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="available">Available</string>
    <string name="available_">Available :</string>
    <string name="available_charging_points">Available charging points</string>
    <string name="back">Back</string>
    <string name="back_button">Back button</string>
    <string name="back_button_warning">Please don\'t hit the back button until the action is complete.</string>
    <string name="background">background</string>
    <string name="basic_information">Basic Information</string>
    <string name="booking_failed_due_to">Booking ticket failed  </string>
    <string name="booking_time">Booking Time</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bus">Bus</string>
    <string name="bus_number">Bus number</string>
    <string name="bus_route">Bus Route</string>
    <string name="bus_route_or_metro_line">Bus Route or Metro Line</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="bus_type">Bus Type</string>
    <string name="buses"> buses</string>
    <string name="buy">Buy</string>
    <string name="buy_new_pass">Buy DTC daily pass</string>
    <string name="buy_new_ticket">Buy ticket</string>
    <string name="calculating_fare">Calculating fare, please wait.</string>
    <string name="call">Call</string>
    <string name="camera">Camera</string>
    <string name="camera_desc">This is required for scanning QR code during booking ticket.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirmation">Are you sure you want to cancel this transaction?</string>
    <string name="capacity">Capacity :</string>
    <string name="change_gender">Change gender information</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charger_type">charger type</string>
    <string name="charging_station_details">Charging Station Details</string>
    <string name="checkout_main">By Fare mode\10Step 1: User scans a QR code present in the bus using the One Delhi app.\10Step 2: User selects fare and number of tickets.\10Step 3: User pay the fare amount.\10Step 4: After successful transaction, user receives the ticket.\10\10By Destination mode\10Step 1: User scans the QR code present in the bus.\10Step 2: User selects the route, source, destination and number of tickets.\10Step 3: Fare is calculated and shown to the user.\10Step 4: User pay the fare amount.\10Step 5: After successful transaction, user receives the ticket.\10</string>
    <string name="choose_language">Choose Language</string>
    <string name="clear_location_history">Clear location history</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_pay_previous">Click here to pay ₹%1$s for your previous ticket.</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">302b5ca20efe4fba87967165c9dca4b2</string>
    <string name="comfort_0">Comfortable seating available</string>
    <string name="comfort_1">Might not get a seat</string>
    <string name="comfort_2">Currently crowded</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="complaint">Complaint</string>
    <string name="complaint_topic">Complaint Topic</string>
    <string name="contact_number">Phone number</string>
    <string name="cost">Cost :</string>
    <string name="cross">cross</string>
    <string name="description">Description</string>
    <string name="do_not_send_otp">I will Use IPIN</string>
    <string name="enter_complain_with_bus_number">Enter complain with bus number.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="error_with_stop_names">Error with stop names</string>
    <string name="ev_stations">EV Stations</string>
    <string name="female">Female</string>
    <string name="help">Help</string>
    <string name="live">Bus</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="no_promotional_use">We won\'t use your details for promotional purposes.</string>
    <string name="non_binary">Non Binary</string>
    <string name="one_delhi_logo">One Delhi Logo</string>
    <string name="other_issue">Other issue</string>
    <string name="prefer_not">Prefer not to say</string>
    <string name="refund">Refund</string>
    <string name="report_problem">Report</string>
    <string name="select_issue">Select issue</string>
    <string name="select_your_gender">What Gender do you identify with?</string>
    <string name="send_otp">Send OTP</string>
    <string name="set_gender">Set Gender</string>
    <string name="space_and_asterisks"> *</string>
    <string name="submit">Submit</string>
    <string name="ticket_not_showing">Ticket not showing</string>
    <string name="tickets">Bus Tickets</string>
    <string name="total_charger">Total :</string>
    <string name="type">Type :</string>
    <string name="update_avail">Update available</string>
    <string name="update_available_body">A new update is available. Kindly update to use the latest features.</string>
    <string name="update_later">Update Later</string>
    <string name="update_now">Update Now</string>
    <string name="verify_mobile_number">Based on the information stored in our database your mobile number is : %s</string>
    <string name="wrong_fare">Wrong fare</string>
</resources>