<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="16dp">
    <TextView android:id="@+id/tv_radio_label" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/verify_mobile_number"/>
    <CheckBox android:id="@+id/cb_send_otp" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/send_otp"/>
    <CheckBox android:id="@+id/cb_do_not_send_otp" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/do_not_send_otp"/>
    <Button android:textColor="@color/white" android:id="@+id/rh_bt_submit" android:background="@color/active_state_submit_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/submit"/>
</LinearLayout>
