<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@+id/ib_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/back" app:srcCompat="@drawable/ic_back_arrow" app:tint="@color/black" style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
        <ImageView android:id="@+id/iv_logo" android:layout_width="match_parent" android:layout_height="120dp" android:layout_below="@+id/ib_back" android:contentDescription="@string/one_delhi_logo" app:srcCompat="@drawable/one_delhi_color_logo"/>
        <TextView android:textSize="20sp" android:textColor="@color/black" android:id="@+id/tv_ques_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_16" android:layout_marginBottom="@dimen/standard_8" android:text="@string/about_us" android:layout_below="@+id/iv_logo" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16"/>
        <TextView android:textSize="16sp" android:id="@+id/tv_body_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/standard_16" android:text="@string/about_us_body_1" android:layout_below="@+id/tv_ques_1" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16"/>
        <TextView android:textSize="20sp" android:textColor="@color/black" android:id="@+id/tv_ques_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_16" android:layout_marginBottom="@dimen/standard_8" android:text="@string/about_us_ques_2" android:layout_below="@+id/tv_body_1" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16"/>
        <TextView android:textSize="16sp" android:id="@+id/tv_body_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/standard_16" android:text="@string/about_us_body_2" android:layout_below="@+id/tv_ques_2" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16"/>
        <TextView android:textSize="20sp" android:textColor="@color/black" android:id="@+id/tv_ques_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_16" android:layout_marginBottom="@dimen/standard_8" android:text="@string/about_us_ques_3" android:layout_below="@+id/tv_body_2" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16"/>
        <TextView android:textSize="16sp" android:id="@+id/tv_body_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/standard_16" android:text="@string/about_us_body_3" android:layout_below="@+id/tv_ques_3" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16"/>
    </RelativeLayout>
</ScrollView>
