<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <ImageView android:id="@+id/iv_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/cross" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_cross" app:tint="@color/black" style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
    <RelativeLayout android:id="@+id/rv_main" android:paddingBottom="@dimen/standard_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/standard_16" android:paddingEnd="@dimen/standard_16">
        <TextView android:textSize="20sp" android:textColor="@color/one_delhi_red" android:id="@+id/tv_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:layout_marginBottom="@dimen/standard_8" android:text="@string/complaint" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:layout_below="@+id/tv_1" android:fontFamily="@font/roboto_regular"/>
        <TextView android:textSize="14sp" android:textColor="@color/metro_red" android:id="@+id/tv_4_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/space_and_asterisks" android:layout_below="@+id/tv_1" android:fontFamily="@font/roboto_regular" android:layout_toEndOf="@+id/tv_4"/>
        <EditText android:id="@+id/edName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_your_name" android:layout_below="@+id/tv_4" android:inputType="textPersonName"/>
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:text="@string/contact_number" android:layout_below="@+id/edName" android:fontFamily="@font/roboto_regular"/>
        <EditText android:id="@+id/edPhoneNumber" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_your_phone_number" android:layout_below="@+id/tv_5" android:inputType="phone"/>
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:text="@string/complaint_topic" android:layout_below="@+id/edPhoneNumber" android:fontFamily="@font/roboto_regular"/>
        <TextView android:textSize="14sp" android:textColor="@color/metro_red" android:id="@+id/tv_8_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:text="@string/space_and_asterisks" android:layout_below="@+id/edPhoneNumber" android:fontFamily="@font/roboto_regular" android:layout_toEndOf="@+id/tv_8"/>
        <Spinner android:id="@+id/spinner_complaint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/tv_8"/>
        <TextView android:textSize="14sp" android:textColor="@color/black" android:id="@+id/tv_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:text="@string/complaint" android:layout_below="@+id/spinner_complaint" android:fontFamily="@font/roboto_regular"/>
        <TextView android:textSize="14sp" android:textColor="@color/metro_red" android:id="@+id/tv_6_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:text="@string/space_and_asterisks" android:layout_below="@+id/spinner_complaint" android:fontFamily="@font/roboto_regular" android:layout_toEndOf="@+id/tv_6"/>
        <EditText android:id="@+id/edComplaint" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/enter_complain_with_bus_number" android:layout_below="@+id/tv_6" android:inputType="textMultiLine"/>
    </RelativeLayout>
    <Button android:textColor="@color/white" android:id="@+id/btn_send" android:background="@color/one_delhi_red" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/submit" android:layout_below="@+id/rv_main" android:layout_marginStart="@dimen/standard_16" android:layout_marginEnd="@dimen/standard_16" style="@style/Widget.AppCompat.Button"/>
    <TextView android:textSize="14sp" android:textColor="@color/comfort_green" android:id="@+id/tv_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/standard_8" android:text="@string/no_promotional_use" android:layout_below="@+id/btn_send" android:fontFamily="@font/roboto_regular" android:paddingStart="@dimen/standard_16" android:paddingEnd="@dimen/standard_16" android:layout_alignParentStart="true"/>
</RelativeLayout>
