<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/one_delhi_red" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageButton android:id="@+id/ib_back" android:visibility="gone" android:layout_width="@dimen/standard_48" android:layout_height="@dimen/standard_48" android:layout_marginTop="@dimen/standard_8" android:contentDescription="@string/back" app:srcCompat="@drawable/ic_back_arrow" app:tint="@color/white" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <TextView android:textSize="48sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/standard_16" android:text="Gender" android:layout_above="@+id/relativeLayout" android:lineSpacingExtra="2dp" android:fontFamily="@font/roboto_light"/>
    <RelativeLayout android:id="@+id/relativeLayout" android:background="@color/white" android:paddingTop="@dimen/standard_8" android:paddingBottom="@dimen/standard_16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:paddingStart="@dimen/standard_16" android:paddingEnd="@dimen/standard_16">
        <TextView android:textSize="20sp" android:textColor="@color/black" android:id="@+id/tv_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:layout_marginBottom="@dimen/standard_8" android:text="@string/select_your_gender"/>
        <RadioGroup android:id="@+id/rg_gender" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/tv_0">
            <RadioButton android:textSize="@dimen/dimen_16sp" android:textColor="@color/black" android:id="@+id/rb_male" android:padding="@dimen/standard_12" android:layout_width="match_parent" android:layout_height="@dimen/standard_48" android:layout_marginBottom="@dimen/standard_8" android:checked="false" android:text="@string/male" android:buttonTint="@color/one_delhi_red"/>
            <RadioButton android:textSize="@dimen/dimen_16sp" android:textColor="@color/black" android:id="@+id/rb_female" android:padding="@dimen/standard_12" android:layout_width="match_parent" android:layout_height="@dimen/standard_48" android:layout_marginBottom="@dimen/standard_8" android:text="@string/female" android:buttonTint="@color/one_delhi_red"/>
            <RadioButton android:textSize="@dimen/dimen_16sp" android:textColor="@color/black" android:id="@+id/rb_non_binary" android:padding="@dimen/standard_12" android:layout_width="match_parent" android:layout_height="@dimen/standard_48" android:layout_marginBottom="@dimen/standard_8" android:text="@string/non_binary" android:buttonTint="@color/one_delhi_red"/>
            <RadioButton android:textSize="@dimen/dimen_16sp" android:textColor="@color/black" android:id="@+id/rb_prefer_not" android:padding="@dimen/standard_12" android:layout_width="match_parent" android:layout_height="@dimen/standard_48" android:layout_marginBottom="@dimen/standard_8" android:text="@string/prefer_not" android:buttonTint="@color/one_delhi_red"/>
        </RadioGroup>
        <Button android:textColor="@color/white" android:id="@+id/btn_set_gender" android:background="@color/one_delhi_red" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="17dp" android:text="@string/set_gender" android:layout_below="@+id/rg_gender" android:textAllCaps="false"/>
    </RelativeLayout>
</RelativeLayout>
