<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/standard_4">
    <ImageView android:id="@+id/iv_charger_diagram" android:layout_width="60dp" android:layout_height="60dp" android:layout_centerHorizontal="true" android:contentDescription="@string/charger_type" app:srcCompat="@drawable/pass_type_round_box"/>
    <TextView android:id="@+id/tv_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:text="@string/type" android:layout_below="@+id/iv_charger_diagram"/>
    <TextView android:textColor="@color/black" android:id="@+id/tv_chargerType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_8" android:layout_below="@+id/iv_charger_diagram" android:layout_toEndOf="@+id/tv_1"/>
    <TextView android:id="@+id/tv_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:text="@string/capacity" android:layout_below="@+id/tv_1"/>
    <TextView android:textColor="@color/black" android:id="@+id/tv_capacity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:layout_below="@+id/tv_1" android:layout_toEndOf="@+id/tv_2"/>
    <TextView android:id="@+id/tv_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:text="@string/total_charger" android:layout_below="@+id/tv_2"/>
    <TextView android:textColor="@color/black" android:id="@+id/tv_chargerCount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:layout_below="@+id/tv_2" android:layout_toEndOf="@+id/tv_3"/>
    <TextView android:id="@+id/tv_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:text="@string/available_" android:layout_below="@+id/tv_3"/>
    <TextView android:textColor="@color/black" android:id="@+id/tv_chargerAvailable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:layout_below="@+id/tv_3" android:layout_toEndOf="@+id/tv_4"/>
    <TextView android:id="@+id/tv_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:text="@string/cost" android:layout_below="@+id/tv_4"/>
    <TextView android:textColor="@color/black" android:id="@+id/tv_chargerCost" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standard_4" android:layout_below="@+id/tv_4" android:layout_toEndOf="@+id/tv_5"/>
</RelativeLayout>
